# nba-jinni

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISIONS.md  Makefile  PENDING_FEATURES.md  README.md  docker-compose.yml  project-plan.md
backend/: pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 1bd6303575da_create_player_season_averages_table.py  61d1dd35b28c_create_team_game_stats.py  64101360f15a_amend_players_with_active.py  f7bafe3f95ab_create_team_season_averages.py
backend/app/: dependencies.py  main.py
backend/app/cache/: stale_cache.py
backend/app/models/: __init__.py  games.py  player_game_stats.py  player_season_averages.py  players.py  seasons.py  standings.py  teams.py  users.py
backend/app/routers/: games.py  players.py  standings.py  teams.py
backend/app/schemas/: game.py  player.py  player_game_stat.py  player_season_average.py  standing.py  team.py  team_game_stat.py  team_season_average.py
backend/tests/: conftest.py  test_games.py  test_players.py  test_standings.py  test_teams.py
docs/: ARCHITECTURE_DECISIONS.md  LOCAL_OPERATIONS.md  PENDING_FEATURES.md  SCHEMA_AMENDMENTS.md  project-plan.md
docs/backend/: ENDPOINTS.md
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useGameBoxScore.ts  useGameDetail.ts  useH2HGames.ts  useLiveScoreboard.ts  usePlayerInfo.ts  usePlayerLast5Games.ts  usePlayerSearch.ts  usePlayerSeasonAverage.ts  usePlayerVsOpponent.ts  usePlayers.ts  useRecentTopPerformances.ts  useStandings.ts  useStandingsPreview.ts  useTeamInfo.ts  useTeamRoster.ts  useTeamSchedule.ts  useTeamStats.ts  useTeams.ts  useTopPlayersPreview.ts
frontend/src/lib/: format.ts  logger.ts
frontend/src/routes/: GameDetail.tsx  Home.tsx  PlayerDetail.tsx  SearchResults.tsx  Standings.tsx  TeamDetail.tsx  Teams.tsx
frontend/src/types/: games.ts  players.ts  teams.ts
infra/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/lambda/: main.tf  (+2 more)
infra/policies/: lambda_s3_policy.json.tpl  lambda_secrets_policy.json.tpl  lambda_trust_policy.json
ingestion/: cli.py  main.py  pyproject.toml
ingestion/db/: session.py
ingestion/seeds/: run_seeds.py  seed_players.py  seed_seasons.py  seed_teams.py
loader/: main.py  pyproject.toml
scripts/: deploy_backend.sh  deploy_frontend.sh  dev_launch.sh  export_to_json.py  invoke_loader.sh  package_backend.sh  package_loader.sh  pyproject.toml  run_ingestion.sh  teardown.sh  upload_to_s3.py
shared/: alembic.ini  pyproject.toml
shared/alembic/: env.py
shared/alembic/versions/: 12cae71f3617_modify_player_season_averages.py  2bded37eada6_add_tipoff_at_to_games.py  2d5fbed26139_create_seasons_table.py  30d5ffecae59_create_player_game_stats_table.py  37faaa6ce77d_update_game_schema.py  5124e8442bf5_create_games_table.py  51cb049fb6c8_update_team_player_season_averages.py  64adc755b41c_add_indexes.py  7ce89d4eb54d_amend_standings.py  9095dfe89506_create_players_table.py  a99b296966ad_make_players_birth_date_nullable.py  bde76166e1b7_update_team_game_stats.py  c34ba340ee20_create_standings_table.py  da5726f6b6a0_create_users_table.py  de83bacbf317_make_teams_conference_and_logo_nullable.py  eecccd16cc32_create_teams_table.py
shared/nbajinni_shared/: alembic_utils.py  logging.py  nba_api_wrapper.py  session.py  utils.py
shared/nbajinni_shared/models/: __init__.py  games.py  player_game_stats.py  player_season_averages.py  players.py  seasons.py  standings.py  team_game_stats.py  team_season_averages.py  teams.py  users.py
shared/tests/: conftest.py  test_compute_player_averages.py  test_compute_team_averages.py  test_ingest_games.py  test_ingest_roster.py  test_ingest_schedule.py  test_ingest_standings.py  test_nba_api_wrapper.py
(+62 files in other folders)
