[tool.poetry]
name = "nbajinni-ingestion"
version = "0.1.0"
description = "NBAJinni nightly Lambda ingestion pipeline"
authors = ["Your Name <you@example.com>"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
