[tool.poetry]
name = "nbajinni-loader"
version = "0.1.0"
description = "Loader Lambda for NBAJinni — loads S3 JSON exports into RDS"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.31.0"
boto3 = "^1.38.0"
alembic = "^1.13.0"
nbajinni-shared = { path = "../shared" }
