[tool.poetry]
name = "nbajinni-shared"
version = "0.1.0"
description = "Shared models and database base for NBAJinni"
authors = ["Your Name <you@example.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
httpx = "^0.27.0"
structlog = "^25.5.0"
nba-api = "^1.11.4"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
